--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10"
